Creating models: user, blog, comment

--- a/blog_project/blog_project/settings.py.example
+++ b/blog_project/blog_project/settings.py.example
@@ -8,6 +8,7 @@ DEBUG = True
 ALLOWED_HOSTS = []
 
 INSTALLED_APPS = [
+  'blog_app.apps.BlogAppConfig',
   'django.contrib.admin',
   'django.contrib.auth',
   'django.contrib.contenttypes',
