--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 .vscode
 /blog_project/blog_project/__pycache__
 /blog_project/blog_project/settings.py
+/blog_project/blog_app/__pycache__
+/blog_project/blog_app/migrations/__pycache__
+/blog_project/blog_app/models/__pycache__
