Basic unit testing for models, views, forms

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@
 /blog_project/blog_app/__pycache__
 /blog_project/blog_app/migrations/__pycache__
 /blog_project/blog_app/models/__pycache__
+/blog_project/blog_app/tests/__pycache__
 env
